# spacesim

./: Cargo.toml  README.md  index.html  rustfmt.toml  spacesim.d.ts  spacesim.js  spacesim_bg.wasm.d.ts
.github/workflows/: publish.yml
bevy_utility_ai/: Cargo.toml
bevy_utility_ai/src/: ai_meta.rs  considerations.rs  dashboard.rs  decisions.rs  define_ai.rs  lib.rs  lib_ecs.rs  lib_gen.rs  plugin.rs  response_curves.rs  scrap.rs  systems.rs  utils.rs
bevy_utility_ai/src/dashboard/: plugin.rs
bevy_utility_ai/src/systems/: make_decisions.rs  update_action.rs
bevy_utility_ai/tests/: e2e.rs  macro_input_system.rs  macro_targeted_input_system.rs  macro_ui.rs  test_e2e.rs  test_macros.rs
bevy_utility_ai/tests/common/: app.rs  mod.rs
bevy_utility_ai/tests/ui/: target_selector_multiple_inputs.rs  target_selector_multiple_inputs.stderr  targeted_input_system_1.rs  targeted_input_system_1.stderr  targeted_input_system_2.rs  targeted_input_system_2.stderr
bevy_utility_ai_macros/: Cargo.toml
bevy_utility_ai_macros/src/: common.rs  input_system.rs  lib.rs  target_selector.rs  targeted_input_system.rs
docs/: MarketSimulationThoughts.md
spacesim/: Cargo.toml
spacesim/src/: main.rs  ui.rs  worldgen.rs
spacesim/src/common/: marker_components.rs
spacesim/src/debugger/: mod.rs
spacesim/src/economy/: plugin.rs
spacesim/src/game/: mod.rs  state.rs  ui.rs  views.rs
spacesim/src/game/ui/: planet_view.rs  query_layer.rs  render_structs.rs  widgets.rs
spacesim/src/game/ui/widgets/: view_selector.rs
spacesim/src/game/views/: planet.rs  system.rs
spacesim/src/game/views/planet/: ui.rs
spacesim/src/game/views/system/: camera.rs  setup.rs  ui.rs  view.rs
spacesim/src/ships/: components.rs
spacesim/src/ui/: render_structs.rs
spacesim_simulation/: Cargo.toml
spacesim_simulation/src/: common.rs  economy.rs  lib.rs  main.rs  planet.rs  ships.rs  worldgen.rs
spacesim_simulation/src/common/: components.rs  marker_components.rs
spacesim_simulation/src/economy/: commodity_type.rs  components.rs  market.rs  market_wq.rs  plugin.rs  system_market_info.rs  systems.rs
spacesim_simulation/src/planet/: components.rs  plugin.rs  systems.rs
spacesim_simulation/src/ships/: actions.rs  ai.rs  bundles.rs  components.rs  plugin.rs
src/: common.rs  economy.rs  main.rs  ui.rs  worldgen.rs
src/common/: marker_components.rs
src/economy/: commodity_type.rs  components.rs  events.rs  market.rs  market_wq.rs  plugin.rs  systems.rs
src/ships/: components.rs  plugin.rs  systems.rs
src/ui/: layer.rs  planet_view.rs  query_layer.rs  render_structs.rs
