[package]
name = "bevy_utility_ai"
version = "0.0.1"
edition = "2021"

[dependencies]
bevy_utility_ai_macros = { path = "../bevy_utility_ai_macros" }
bevy = "0.10"
syn = { version = "1", features = ["extra-traits", "full", "fold"] }
quote = "1"
uuid = { version = "1.3", features = ["v4", "fast-rng"] }
